[package]
name = "cctrusted_base"
version = "0.1.0"
edition = "2021"
authors = ["Chen Hairong <hairong.chen@intel.com>", "Lu Ken <ken.lu@intel.com>"]
repository = "https://github.com/cc-api/cc-trusted-api"
description = "CC Trusted API Base SDK"
license = "Apache-2.0"

[lib]
name = "cctrusted_base"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
base64 = "0.13.0"
log = "0.4.20"
sha2 = "0.10"
lazy_static = "1.4.0"
hashbrown = "0.14"
hex = "0.4.3"
