[package]
name = "evidence_api"
version = "0.5.0"
edition = "2021"
authors = ["Chen Hairong <hairong.chen@intel.com>", "Lu Ken <ken.lu@intel.com>"]
repository = "https://github.com/cc-api/evidence-api"
description = "Evidence API Base SDK"
license = "Apache-2.0"

[lib]
name = "evidence_api"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
base64 = "0.13.0"
log = "0.4.20"
sha1 = "0.10.6"
sha2 = "0.10"
lazy_static = "1.4.0"
hashbrown = "0.14"
hex = "0.4.3"
scale = { version = "3.6.12", package = "parity-scale-codec", features = ["derive"] }
