[package]
name = "cctrusted_vm"
version = "0.1.0"
edition = "2021"
authors = ["Chen Hairong <hairong.chen@intel.com>", "Lu Ken <ken.lu@intel.com>"]
repository = "https://github.com/cc-api/cc-trusted-api"
description = "CC Trusted API VM SDK"
license = "Apache-2.0"

[lib]
name = "cctrusted_vm"
path = "src/lib.rs"

[dependencies]
cctrusted_base = { path = "../../../common/rust/cctrusted_base" }
anyhow = "1.0"
log = "0.4.20"
nix = "0.26.2"
base64 = "0.13.0"
rand = "0.8.5"
